<resources>
    <string name="app_name">Terminightor</string>
    <string name="title_alarmitem_detail">Alarm</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="repeatCheckBoxText">Repeat</string>
    <string name="days_of_week_letters">MTWTFSS</string>
    <string name="alarmLabelBoxHint">label</string>
    <string name="title_set_tag">Set Tag</string>
    <string name="tapToCancel">Tap to Cancel</string>
    <string name="noTagSet">No Tag set</string>
    <string name="noNfcTagMessage">No Nfc tag set. Please set one.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wrongTagToast">Wrong Tag.</string>
    <string name="alarm">Alarm!!!</string>
    <string name="noneAlarmTone">None</string>
    <string name="selectAlarmToneTitle">Alarm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_night_killer">Night Killer</string>
    <string name="use24HoursTitle">Display in 24 Hours.</string>
    <string name="vibrate">Vibrate</string>
    <string name="overrideAlarmVolumeTitle">Override alarm volume.</string>
    <string name="overrideAlarmVolumeDescription">Sets the alarm to full value when it\'s triggered.</string>
    <string name="warningText">CAUTION: Do not use NFC Tags which change their id every time they get reed.</string>
    <string name="unlockInfoText">Unlock screen, and enable NFC.</string>
    <string name="defaultRingTone">Default</string>
    <string name="alarmSaved">Alarm Saved</string>
    <string name="ignoreNfcTagIdTitle">Ignore NFC tag ID</string>
    <string name="ignoreNfcTagIdSummary">If this is set Terminightor will not check the ID of an Nfc tag, when switching an alarm off.</string>
</resources>
