<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AlarmItemDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/alarmitem_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MergeRootFrame"
            android:focusableInTouchMode="true"
            android:focusable="true">

            <TextView android:id="@+id/setAlarmTimeView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="70sp"
                android:text="--:--"
                android:textColor="@android:color/white"
                android:clickable="true"/>

            <TextView android:id="@+id/setAlarmAmPmSuffix"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/setAlarmTimeView"
                android:layout_alignBottom="@id/setAlarmTimeView"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:text="AM" />


            <CheckBox android:id="@+id/setRepeatCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setAlarmTimeView"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/repeatCheckBoxText"
                android:textColor="@android:color/white"/>

            <org.schabi.terminightor.ChooseDaysView
                android:id="@+id/chooseDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setRepeatCheckBox"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:days_of_week="@string/days_of_week_letters"
                android:visibility="gone"/>

            <EditText android:id="@+id/setAlarmLabelBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseDateView"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/fabButtonColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/alarmLabelBoxHint"
                android:textColor="@android:color/white"
                android:singleLine="true"/>

            <Button android:id="@+id/setAlarmToneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setAlarmLabelBox"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_notifications_white_24dp"
                android:text="@string/noneAlarmTone"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"/>

            <CheckBox android:id="@+id/vibrateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setAlarmToneButton"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vibrate"
                android:textColor="@android:color/white"/>

            <ImageView android:id="@+id/nfcTagLabelView"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_below="@id/vibrateCheckBox"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:visibility="gone"
                android:src="@drawable/nfc_wokring"/>

            <TextView android:id="@+id/nfcTagIdView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@id/nfcTagLabelView"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:text="@string/noTagSet"/>

            <TextView android:id="@+id/warningTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_red_dark"
                android:layout_below="@id/nfcTagIdView"
                android:text="@string/warningText"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/warningTextView"/>

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addNfcTagButton"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="16dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@color/fabButtonColor"
        android:src="@drawable/ic_nfc_white"/>

</RelativeLayout>

